# http-types

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
src/: body.rs  client.rs  error.rs  extensions.rs  headers.rs  hyperium_http.rs  hyperium_http_1.rs  lib.rs  macros.rs  macros_internal.rs  method.rs  mime.rs  parse_utils.rs  request.rs  response.rs  result_ext.rs  server.rs  status.rs  status_code.rs  trailers.rs  type_map.rs  version.rs
src/auth/: authentication_scheme.rs  authorization.rs  basic_auth.rs  mod.rs  www_authenticate.rs
src/cache/: age.rs  cache_control.rs  etag.rs  expires.rs  mod.rs
src/cache/cache_control/: cache_control.rs  cache_directive.rs  mod.rs
src/cache/clear_site_data/: directive.rs  mod.rs
src/client_hints/: mod.rs  save_data.rs
src/conditional/: etag.rs  if_match.rs  if_modified_since.rs  if_none_match.rs  if_range.rs  if_unmodified_since.rs  last_modified.rs  match_directive.rs  mod.rs  vary.rs  vary_directive.rs
src/content/: accept.rs  accept_encoding.rs  accept_language.rs  content_encoding.rs  content_length.rs  content_location.rs  content_type.rs  encoding.rs  encoding_directive.rs  encoding_proposal.rs  language_range_proposal.rs  media_type_proposal.rs  mod.rs
src/errors/: error_kind.rs  mod.rs  request_error.rs  response_error.rs
src/headers/: constants.rs  header.rs  header_name.rs  header_value.rs  header_values.rs  headers.rs  into_iter.rs  iter.rs  iter_mut.rs  mod.rs  names.rs  parse_error.rs  to_header.rs  to_header_values.rs  values.rs  values_mut.rs
src/language/: mod.rs  parse.rs
src/media_type/: constants.rs  mod.rs  parse.rs
src/mime/: constants.rs  mod.rs  parse.rs
src/multipart/: entry.rs  mod.rs
src/other/: date.rs  expect.rs  link.rs  link_directive.rs  mod.rs  referer.rs  relation_type.rs  retry_after.rs  source_map.rs
src/proxies/: forwarded.rs  mod.rs
src/range/: accept_ranges.rs  bytes.rs  content_range.rs  mod.rs  range.rs
src/secure/: mod.rs
src/security/: csp.rs  mod.rs  strict_transport_security.rs  timing_allow_origin.rs
src/server/: allow.rs  mod.rs  server.rs
src/trace/: allow_origin.rs  mod.rs  server_timing.rs  trace_context.rs
src/trace/server_timing/: entry.rs  metric.rs  mod.rs  parse.rs
src/transfer/: encoding.rs  encoding_proposal.rs  mod.rs  te.rs  trailers.rs  transfer_encoding.rs
src/upgrade/: connection.rs  receiver.rs  sender.rs
src/utils/: date.rs  mod.rs
tests/: error.rs  media_type.rs  mime.rs  querystring.rs  req_res_body.rs  security.rs
