[package]
name = "http-types"
version = "2.12.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/http-types"
documentation = "https://docs.rs/http-types"
description = "Common types for HTTP operations."
keywords = ["http", "types", "request", "response", "h2"]
categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["fs", "cookie-secure"]
docs = ["unstable"]
unstable = []
hyperium_http = ["http"]
async_std = ["fs"]
cookies = ["cookie"]
cookie-secure = ["cookies", "cookie/secure"]
fs = ["async-std"]

[dependencies]
# features: async_std
async-std = { version = "1.6.0", optional = true }
futures-lite = "1.11.1"
async-channel = "1.5.1"

# features: hyperium/http
http = { version = "0.2.0", optional = true }

anyhow = "1.0.26"

# features: cookies
cookie = { version = "0.14.0", features = ["percent-encode"], optional = true }
infer = "0.2.3"
pin-project-lite = "0.2.0"
url = { version = "2.1.1", features = ["serde"] }
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
serde_urlencoded = "0.7.0"
rand = "0.8.5"
serde_qs = "0.8.3"
base64 = "0.13.0"

[dev-dependencies]
http = "0.2.0"
async-std = { version = "1.6.0", features = ["attributes"] }
