[package]
name = "http-types"
version = "3.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/http-types"
documentation = "https://docs.rs/http-types"
description = "Common types for HTTP operations."
keywords = ["http", "types", "request", "response", "h2"]
categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["fs", "cookie-secure", "serde"]
docs = ["unstable"]
unstable = []
hyperium_http = ["http"]
async_std = ["fs"]
cookies = ["cookie"]
cookie-secure = ["cookies", "cookie/secure"]
fs = ["async-std"]
serde = ["serde_qs", "serde_crate", "serde_json", "serde_urlencoded", "url/serde"]

[dependencies]
fastrand = "2.0.1"
base64 = "0.21.5"
futures-lite = "2.2.0"
async-channel = "2.1.1"
infer = "0.15.0"
pin-project-lite = "0.2.13"
url = "2.5.0"
anyhow = "1.0.79"

# features: async_std
async-std = { version = "1.12.0", optional = true }

# features: hyperium/http
http = { version = "1.0.0", optional = true }

# features: cookies
cookie = { version = "0.18.0", features = ["percent-encode"], optional = true }

# features: serde
serde_json = { version = "1.0.111", optional = true }
serde_crate = { version = "1.0.195", features = ["derive"], optional = true, package = "serde" }
serde_urlencoded = { version = "0.7.1", optional = true}
serde_qs = { version = "0.12.0", optional = true }


[dev-dependencies]
http = "1.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
